--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "jest",
+    "start": "node src/main.js",
+    "test": "jest --coverage",
     "test:watch": "jest --watchAll"
   },
   "repository": "git+https://github.com/danilofeijo/the-layer-mapper.git",
