--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "the-layer-mapper",
   "version": "0.0.1",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/main.js",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll"
   },
