--- a/src/layer-config.json
+++ b/src/layer-config.json
@@ -2,5 +2,6 @@
     "unitTests": {
         "regex": ".*it[(]['\"](.+?)['\"`]",
         "folderPath": "../src/tests"
-    }
+    },
+    "outputFolder": "../output"
 }
