Adicionando geração de arquivo HTML

--- a/src/layer-config.json
+++ b/src/layer-config.json
@@ -3,5 +3,13 @@
         "regex": ".*it[(]['\"](.+?)['\"`]",
         "folderPath": "../src/tests"
     },
+    "integrationTests": {
+        "regex": ".*it[(]['\"](.+?)['\"`]",
+        "folderPath": "../src/tests"
+    },
+    "endToEndTests": {
+        "regex": ".*it[(]['\"](.+?)['\"`]",
+        "folderPath": "../src/tests"
+    },
     "outputFolder": "../output"
 }
